--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,11 +7,13 @@
 .shopping-list li.Got span { text-decoration: line-through; color: #2b2; }
 .shopping-list li.Need span { color: #00f; }
 
-.shopping-list .controls { padding-top: 20px; }
-.shopping-list .controls input { margin: 0px; }
+.shopping-list-controls { list-style-type: none; width: 350px; padding-top: 20px; display: none; }
+.shopping-list-controls input { margin: 0px; }
 
 .user-form .error { padding: 10px; background-color: #faa; color: #f22; margin-bottom: 10px; border: 1px solid #f22; border-radius: 5px; }
 
 .user-form { margin: 10px; width: 220px; }
 .user-form .register { line-height: 32px; padding: 5px; }
 .user-form .login { float: right; }
+
+.error { display: none; }
